@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.88
+Release: 0.89
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -522,6 +522,11 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Mon Aug 26 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.89
+- python: don't remap NOKEY/UNTRUSTED to OK.
+- beecrypt: change local absolute symbols to defines for prelinking.
+- update ru.po.
+
 * Fri Aug 22 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.88
 - merge signature returns into rpmRC.
 - python: exceptions on NOKEY/NOTTRUSTED.
